data/all_generated_tests/raw_wast_tests/call_IncorrectConditionEvaluation_3522.wast
;; Certainly! Here are the descriptions of 10 unique differential tests focusing on incorrect condition evaluation within the context of the `call` instruction:  1. **Test Description:** Validate a `call` to a function with an excessive number of arguments on the stack. The test should confirm that the `wizard_engine` traps due to the arity mismatch, whereas the WebAssembly implementation continues execution. Specific Constraint:** The control flow behavior in WebAssembly and argument checking in `wizard_engine` differ, leading to an arity mismatch.

(assert_invalid
  (module
    (func $excessive-arguments-call (param i32 i32)
      (call 0 (i32.const 1) (i32.const 2) (i32.const 3))
    )
    (func (param i32))
  )
  "type mismatch"
)